fix theme change bug and playlist z index on mobile

--- a/client/src/styles/pages/user/_playlist.scss
+++ b/client/src/styles/pages/user/_playlist.scss
@@ -22,6 +22,7 @@ div.playlist-wrapper {
   height: 500px;
   border-radius: 5px;
   overflow: hidden;
+  z-index: 1;
 }
 
 .light {
